# xServer

./: CMakeLists.txt  README.md  csapp.c  csapp.h  main-final.c  main-thread.c  main.c  pcbuf.c  pcbuf.h  server.c  server.h  utils.c  utils.h  zlog.conf
dynamic/: fcgi.c  fcgi.h  request.h
test/: threading.c
threadUtils/: cbuf.c  cbuf.h  xbuf.c  xbuf.h  xbuf_p.c  xbuf_p.h  xthread.c  xthread.h  xthread_p.c  xthread_p.h
web/: index.html  submit.html
web/cgi-bin/: adder.c  form-adder  form-adder.c  head-adder.c
web/index_files/: all_async_search_fd576e4.js  card_min_dee38e45.css  index_e50830a0.js  mancard_2ee35e99.js  min_super_63b160d0.js  newmusic_min_0048b8c6.css  newmusic_min_35dd219a.js  pc.js  sbase_98a96f3f.js  super_min_0cd40cbc.css  u=1961277085,1074496153&fm=173&app=25&f=JPEG  u=2020448557,3759220313&fm=173&app=25&f=JPEG  u=2353037600,2048171965&fm=173&app=25&f=JPEG  u=790669828,3696965477&fm=173&app=25&f=JPEG
web/joeyac/: submit.html
web/joeyac/cgi-bin/: adder  adder.c  form-adder.c  head-adder  head-adder.c
